--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                     <div class="legal">
                         No copyright &copy; to any Trillo. <br>
-                        Made in 💗 by Shreya Koley. <br>
+                        Made with ❤️ by Shreya Koley. <br>
                         I have made this website for fun and understanding.
                     </div>
                 </nav>
